updating my details again

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I originally got my bachelors degree in Psychology and thought that was the career path I wanted to take. After spending sometime within the behavioral health field, I've decided that I want to make a career shift. I've always been interested in the coding world but never explored that interest until I came across this course. </p>
+      <p>I originally got my bachelors degree in Psychology and thought that was the career path I wanted to take. After spending sometime within the behavioral health field, I've decided that I want to make a career shift. I've always been interested in the coding/computer world but never explored that interest until I came across this course. </p>
       <h1>Where I'm From</h1>
       <p>I'm from the Central Washington area. </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I love to play with my dog, Okie. He's my best friend. When I'm not working or hanging out with my dog I like to paddleboard. Still figuring that one out and would like to eventually master it so I can take my dog on it as well! Always thought that was cool. My favorite pastime to relax to is watching movie or shows. </p>
+      <p>I love to play with my dog, Okie. He's my best friend. When I'm not working or hanging out with my dog I like to paddleboard. Still figuring that one out and would like to eventually master it so I can take my dog on it as well! Always thought that was cool. My favorite pastime to relax to is watching movies or shows. </p>
       <h1>What's your dream job?</h1>
-      <p>My dream job is somehting that I would find kind of challening. I want something that is also creative. I want to see the hardwork pay off by being able to see something I've created.  </p>
+      <p>My dream job is somehting that I would find kind of challening. I want something that is also creative. I want to see my hardwork pay off by being able to see something I've created.  </p>
       <h1>Where do you live?</h1>
       <p>I currently live in Ellensburg, WA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I want to be a web developer because I think that it will make me think, I think it will be challenging, and I think that it is creative. I'm excited to be getting my foot in the door for the computer world and get to try somehting new. </p>
+      <p>I want to be a web developer because I think that it will make me think, I think it will be challenging, and I think that it is creative. I'm excited to be getting my foot in the door to the computer world and get to try somehting new. </p>
     </section>
 
     <footer id="footer">
